# EQlibrium

./: .gitignore  CMakeLists.txt  EQlibrium.proj.DotSettings  LICENSE  README.md
Documentation/: documentation.md  documentation_de.md  documentation_en.md
src/: PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp
src/graph/: PathProducer.cpp  PathProducer.hpp  ResponseCurveComponent.cpp  ResponseCurveComponent.hpp  WaveForm.cpp  WaveForm.hpp
src/image/: EQImages.cpp  EQImages.hpp
src/inputs/: ChannelButtons.cpp  ChannelButtons.hpp  ComboBox.cpp  ComboBox.hpp  GlowImageButtons.cpp  GlowImageButtons.hpp  LoudnessSlider.cpp  LoudnessSlider.hpp  NormalImageButtons.cpp  NormalImageButtons.hpp  PlayButton.cpp  PlayButton.hpp  ReplayButton.cpp  ReplayButton.hpp  RotarySlider.cpp  RotarySlider.hpp  TextButtons.cpp  TextButtons.hpp
src/level_meter/: LevelMeter.cpp  LevelMeter.hpp
src/main/: PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp
src/tooltip/: ToolTip.cpp  ToolTip.hpp
